Push voor de kleur

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,11 @@
         <p>Section</p>
     </section>
 
-    <section>
-        
-    </section>
+    <% portfolioItems.forEach(item => { %>
+        <section class="<%= item.BGColor %>">
+            <p><%= item.title %></p>
+        </section>
+    <% }); %>
 </main>
 
 <%- include('./partials/foot') %>
