--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/head') %>
 
 <main>
-    <section class="top-content">
+    <section class="top-content yellow">
         <p>Section</p>
     </section>
 
