--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,6 @@
 body, html, h1, h2, p {
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 
 .blue {
@@ -20,9 +19,10 @@ main {
     height: 100vh;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
-  }
+}
   
-  section {
+section {
     height: 100vh;
     scroll-snap-align: start;
+    padding: 2rem;
 }
