--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
 <%- include('./partials/head') %>
 
 <main>
-    <section class="top-content yellow">
-        <p>Section</p>
+    <section class="top-content">
+        <h1>Neem een 👀 kijkje naar mijn 💻 werk.</h1>
     </section>
 
     <% portfolioItems.forEach(item => { %>
