--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap');
+:root {
+    --c-primairy: #DF5B57;
+    --c-secondary: #ededed;
+    --c-tertiary: #93AFBB;
+    --c-fourthary: #fff;
+    font-size: 16px;
+}
+
 body, html, h1, h2, p {
     margin: 0;
     padding: 0;
+}
+
+body {
+    font-family: 'Raleway', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+h1 {
+    font-size: 7rem;
+}
+
+.top-content {
+    background-color: #f5f5f5;
+    padding: 0rem 10rem;
 }
 
 .blue {
