--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
         <section class="<%= item.BGColor %>">
             <div class="inner-section">
                 <p><%= item.title %></p>
+                <img src="/img/<%= item.imageURL %>">
             </div>  
         </section>
     <% }); %>
