--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@
         <section id="<%= item.id %>" class="<%= item.BGColor %>">
             <div class="inner-section">
                 <div class="content-box">
+                    <span class="view-live">Klik op live te bekijken!</span>
                     <a class="image-live-link" href="<%= item.redirectURL %>" target="_blank">
                         <img src="/img/<%= item.imageURL %>">
                     </a>
